--- a/public/templates/profile.html
+++ b/public/templates/profile.html
@@ -6,7 +6,7 @@
         {{vm.userObject.name}} <button class="btn btn-default">Edit</button>
     </div>
     <div>
-      {{vm.userObject.email}} <button class="btn btn-default">Edit</button>
+      {{vm.userObject.email}} <button class="btn btn-default" ng-click="vm.showEmailEdit()">Edit</button> <span ng-show="vm.emailStatus"><input class="form-control" placeholder="email" ng-model="vm.email"><button class="btn btn-defualt" ng-click="vm.setEdit()">Submit</button></span>
     </div>
     <div>
         {{vm.userObject.uid}} <button class="btn btn-default">Edit</button>
